--- a/class-2/src/App.css
+++ b/class-2/src/App.css
@@ -1,59 +1,31 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+nav {
+  height: 39px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.btn-light img {
+  width: 25px;
+  height: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom-btn-padding img {
+  padding-right: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.btn-light:hover {
+  border-radius: 0px;
 }
 
-.card {
-  padding: 2em;
+.custom {
+  
+  height: 100vh;
+  width: 100vw;
 }
 
-.read-the-docs {
-  color: #888;
-}
-.heading{
-  background-color: brown;
+h2 {
+  background-color: rgb(0, 0, 0, 0.7);
 }
 
-.navbar {
-  height: 45px;
-  /* position: fixed; */
-}
-
-.nav-link {
-  color: white !important;
-  padding-right: 10px !important;
-}
-
-.nav-item:hover {
-  background-color: gray;
+.btn-hover-danger:hover {
+  background-color: red;
+  border: none;
 }
